# IntTape

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  IntTape  IntTape.cpp  Makefile  README.md  TestTape.cpp  generate_data.cpp  generate_input.cpp  generate_operations.cpp  main.cpp  rcounter.cpp  result_fstream.txt  tape_fstream.cpp  tape_mmap.cpp  test.cpp  test.txt
config/: delay.txt
input/: input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
output/: correct10.txt  correct11.txt  correct12.txt  correct13.txt  correct14.txt  correct2.txt  correct6.txt  correct7.txt  correct8.txt  correct9.txt
scripts/: MakeDirs.sh  check_solution.sh  make_dirs.sh
src/: CMakeLists.txt  generate_data.cpp  main.cpp  test_int_tape.cpp
src/ConvertFile/: ConvertFile.cpp  ConvertFile.h
src/DelayParse/: DelayParse.cpp  DelayParse.h
src/Encode/: Encode.cpp  Encode.h
src/SortTape/: SortTape.cpp  SortTape.h
src/Tape/: Tape.cpp  Tape.h
src/TapeDelays/: TapeDelays.h
src/TapeEncode/: TapeEncode.cpp  TapeEncode.h
src/convert_file/: CMakeLists.txt  convert_file.cpp  convert_file.hpp
src/delay_parse/: CMakeLists.txt  delay_parse.cpp  delay_parse.hpp
src/delay_parse/include/: delay_parse.hpp
src/sort_tape/: CMakeLists.txt  sort_tape.cpp  sort_tape.hpp
src/sort_tape/include/: sort_tape.hpp
src/tape/: CMakeLists.txt  tape.cpp  tape.hpp
src/tape/include/: tape.hpp
src/tape_delays/: tape_delays.hpp
src/tape_delays/include/: tape_delays.hpp
tmp/: tape.txt
